[gd_scene load_steps=8 format=3 uid="uid://cv7aj5m0glpj3"]

[ext_resource type="Script" uid="uid://cs2w0y2bjr6on" path="res://scenes/mesh_test_1/smol_mesh.gd" id="1_ckogf"]
[ext_resource type="Script" uid="uid://c6vx63nmus2s8" path="res://scenes/mesh_test_1/camera_pivot.gd" id="2_hhcjo"]
[ext_resource type="Shader" uid="uid://crroawhqg5dkn" path="res://wire.gdshader" id="2_oswoe"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_n37tv"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ba244"]
sky_material = SubResource("ProceduralSkyMaterial_n37tv")

[sub_resource type="Environment" id="Environment_hb1aa"]
background_mode = 2
sky = SubResource("Sky_ba244")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l8ih8"]
render_priority = 0
shader = ExtResource("2_oswoe")
shader_parameter/albedo = Color(0, 0, 0, 1)
shader_parameter/outline_width = 3.0

[node name="MeshTest1" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hb1aa")

[node name="CameraPivot" type="Node3D" parent="."]
script = ExtResource("2_hhcjo")

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="SmolMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_l8ih8")
script = ExtResource("1_ckogf")
radius = 0.5
subdivisions = 100

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Tracker" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 67.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "TEST"
metadata/_edit_use_anchors_ = true

[node name="ThreadButton" type="CheckButton" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -94.0
offset_right = 1.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
theme_override_font_sizes/font_size = 20
text = "Threading"
metadata/_edit_use_anchors_ = true
